# jason_ssh

./: .gitignore  .python-version  README.md  demo.py  pyproject.toml
scripts/: calc_trend.py  demo.py
src/jason_ssh/: __init__.py  config.py  data.py  grid.py  plot.py  trend.py  ui.py
